# matsyota

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/matsyota_agent/share/matsyota_agent/: package.ps1  package.sh  package.zsh
install/matsyota_controller/share/matsyota_controller/: package.bash  package.dsv  package.sh  package.xml
install/matsyota_simulator/share/matsyota_simulator/: local_setup.dsv  local_setup.sh  package.sh  package.xml
install/matsyota_simulator/share/matsyota_simulator/cmake/: matsyota_simulatorConfig.cmake
install/matsyota_simulator/share/matsyota_simulator/launch/: master.launch.py  swarm.launch.py
install/matsyota_simulator/share/matsyota_simulator/worlds/: empty_water.world
log/: latest_build
matsyota_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
matsyota_ws/install/matsyota_agent/share/matsyota_agent/: package.bash  package.dsv  package.ps1  package.sh  package.xml
matsyota_ws/log/: latest_build
matsyota_ws/src/matsyota_agent/: package.xml  setup.cfg  setup.py
matsyota_ws/src/matsyota_agent/matsyota_agent/: asv_driver.py
matsyota_ws/src/matsyota_controller/: feed_dispersion_mapper.py  package.xml  setup.cfg  setup.py
matsyota_ws/src/matsyota_controller/matsyota_controller/: feed_dispersion_mapper.py  matsyota_commander.py
matsyota_ws/src/matsyota_simulator/: CMakeLists.txt  package.xml
matsyota_ws/src/matsyota_simulator/launch/: master.launch.py
matsyota_ws/src/matsyota_simulator/urdf/: asv.urdf.xacro
(+27 files in other folders)
